--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -42,11 +42,11 @@ Email: yurovsky@uchicago.edu
 \begin{document}
 \maketitle
 
-Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should ask how they tasted. Or perhaps he misheard her or she misspoke---she actually ate \emph{peas}. To interpret Alice's utterance, Bob has to integrate perceptual information from her speech with his expectations about what words usually go with ``carrots'' and ``dinner'' and what foods people usually eat. Modern statistical language processing systems use a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}.
+Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should ask how they tasted. Or perhaps he misheard her or she misspoke---she actually ate \emph{peas}. To interpret Alice's utterance, Bob must integrate perceptual information from her speech with his expectations about what words usually go with ``carrots'' and ``dinner'' and what foods people usually eat. Modern statistical language processing systems use a body of theory based on this idea---language is a \emph{noisy channel}, and Bob can correct perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}.
 
-Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010}. On this view of language, comprehenders integrate prior expectations with perceptual data probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adults corrected these errors, and critically did so more often when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors less often when they thought they were in a ``silly'' context where many other sentences were similarly implausible.
+Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010}. On this view, comprehenders integrate prior expectations with perceptual data probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adults corrected these errors, and critically did so more often when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors less often when they thought they were in a ``silly'' context where many other sentences were similarly implausible.
 
-Do children also process language in the same flexible, expectation-based way? Toddlers use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. They also use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning. When top-down and bottom-up cues conflict, preschoolers often over-weigh, or even attend exclusively to lower-level cues \cite{trueswell1999,snedeker2004}.
+Do children also process language in this flexible, expectation-based way? Toddlers use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. They also use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning. When top-down and bottom-up cues conflict, preschoolers often over-weigh, or even attend exclusively to lower-level cues \cite{trueswell1999,snedeker2004}.
 
 Outside of language processing, even older children sometimes fail to combine cues \cite{gori2008,nardini2008,nardini2010}. For example, while adults integrate haptic and visual cues to estimate both size and orientation, 8-year-olds rely exclusively on vision for orientation and haptics for size. Thus, children's successful use of independent information---for example, about high-level speaker expectations \cite{graham2014,matthews2010} or speaker reliability \cite{pasquini2007}---does not their guarantee integration with perceptual uncertainty.
 
@@ -103,11 +103,11 @@ In order to validate our manipulation, we first analyze the effect of the speake
 Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition ($Test \sim condition + (1|subj) + (1|item)$; $\beta_{child} = 1.10$, $z = 3.53$, $p <.001$, $d = 1.10$; $\beta_{adult} = 3.11$, $z = 3.56$, $p <.001$, $d = 1.09$). While children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker. To confirm these findings formally, we again fit a mixed-effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction ($Test \sim age \cdot condition + (1|subj) + (1|item)$). Both of the main effects were significant, but the interaction was not ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: \cdot \: Plausible} = -1.01$,  $z = -1.53$, $p = .13$). Thus, children and adults, to the same degree, were more likely to select the plausible referent on ambiguous Test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials.
 
 
-When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}, but in contrast cases in which children appear to over-rely on bottom-up cues \cite{snedeker2004, trueswell1999}. These results suggest that children's relative reliance on bottom-up or top-down cues may not be fixed, but rather an adaptive function of the reliability of their processing of different kinds of cues. We explore this question further in Experiment 3 after we first replicate Experiment 1.
+When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}, but in contrast to cases in which children appear to over-rely on bottom-up cues \cite{snedeker2004, trueswell1999}. These results suggest that children's relative reliance on bottom-up or top-down cues may not be fixed, but rather an adaptive function of the reliability of their processing of different kinds of cues. We explore this question further in Experiment 3 after we first replicate Experiment 1.
 
 \section{Experiment 2}
 
-Experiment 2 replicates Experiment 1 in a larger and developmentally-broader sample of children. We ask two related questions: (1) Does the use of speaker-expectations increase over development, and (2) if so, is due to improving abilities to form these expectations or to bring them bear in processing ambiguous utterances.
+Experiment 2 replicates Experiment 1 in a larger and developmentally-broader sample. We ask two related questions: (1) Does the use of speaker-expectations increase over development, and (2) if so, is due to improving abilities to form these expectations or to use them in processing ambiguous utterances.
 
 \subsection{Method}
 
@@ -153,11 +153,11 @@ We next turned to the Test trials. When we examined each age group separately we
 
 Older children were thus more sensitive to the speaker's utterances on unambiguous Exposure trials, and relied more on their speaker-expectations on ambiguous Test trials. Did older children rely more on their speaker-expectations because they had built stronger expectations on Exposure trial? If so, individual differences in children's performance on Exposure trials should explain away the effect of age on Test trials. In contrast, if the ability to leverage these expectations is improving over development, age should predict additional variance in ambiguous Test trial responses over and above children's responses on Exposure trials.
 
-To answer this question, we fit an additional model including the proportion of Exposure trials on which individual children had selected the plausible referent. We assume that children who more frequently selected the plausible referent in the Plausible referent in the Plausible Speaker condition, or less frequently selected the plausible referent in the Implausible Speaker condition were encoding more information about the Speaker's plausibility ($Test \sim age + condition \cdot Exposure + (1|subj) + (1|item)$.
+To answer this question, we fit an additional model including the proportion of Exposure trials on which individual children had selected the plausible referent. We assume that children who more frequently selected the plausible referent in the Plausible Speaker condition, or less frequently selected the plausible referent in the Implausible Speaker condition were encoding more information about the Speaker's plausibility ($Test \sim age + condition \cdot Exposure + (1|subj) + (1|item)$.
 
-This model showed a significant effect of Plausible Speaker ($\beta_{Plausible} = 1.92$, $z = 3.39$, $p = .001$), a significant effect of individual differences in Exposure selection ($\beta_{Exposure} = 2.84$, $z = 4.60$, $p < .001$), and a significant interaction between Plausible Speaker and Exposure selection ($\beta_{Plausible \: \cdot \: Exposure} = -3.32$, $z = -3.64$, $p < .001$), but no effect of age ($\beta_{age} = .06$, $z = .56$, $p = .57$). This was true both when all of the children were analyzed, and when only the 4- and 5- year olds were included in the model. Thus, older children's increased use of speaker expectations on ambiguous Test trials appears to be explained by their stronger encoding of Speaker preferences on the unambiguous Exposure trials.
+This model showed a significant effect of Plausible Speaker ($\beta_{Plausible} = 1.92$, $z = 3.39$, $p = .001$), a significant effect of individual differences in Exposure selection ($\beta_{Exposure} = 2.84$, $z = 4.60$, $p < .001$), and a significant interaction between Plausible Speaker and Exposure selection ($\beta_{Plausible \: \cdot \: Exposure} = -3.32$, $z = -3.64$, $p < .001$), but no effect of age ($\beta_{age} = .06$, $z = .56$, $p = .57$). This was true both when all of the children were analyzed, and when only the 4- and 5- year olds were included in the model. Older children's increased use of speaker expectations on ambiguous Test trials appears to be explained by their stronger encoding of Speaker preferences on the unambiguous Exposure trials.
 
-Thus, it appears that older children relied more on speaker expectations because they had formed stronger expectations rather than because they rely on expectations differently. Experiments 1 and 2 thus show that children's reliance on speaker-expectations remains relatively constant across the 3--6 year range, but that their ability to build these expectations improves gradually across development.
+Thus, it appears that older children relied more on speaker expectations because they had formed stronger expectations rather than because they rely on expectations differently. Experiments 1 and 2 thus show that children's reliance on speaker-expectations remains relatively constant across the 3--6 year range, but that their ability to build these expectations improves gradually across development \cite{graham2014,matthews2010}.
 
 
 \section{Experiment 3}
@@ -214,13 +214,13 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer speakers' intended meaning \cite{clark1996}. Because perception is inherently uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments show that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier. Children's reliance on speaker-expectations appears to track their developing ability to form these expectations, an ability that improves over the preschool years.
+When we use language to communicate, we do more than process the sounds we hear; we try to infer speakers' intended meaning \cite{clark1996}. Because perception is inherently uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments show that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier. Children's reliance on speaker-expectations appears to track their developing ability to form these expectations, an ability that improves over the preschool years.
 
-In our studies, children adjusted their reliance on expectations as much as adults, but also generally relied more on top-down expectations. Because of the greater noise inherent in children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations rely more on the acoustic signal. Our paradigm could be used to test this prediction.
+In our experiments, children adjusted their reliance on expectations as much as adults, but also generally relied more on top-down expectations. Because of the greater noise inherent in children’s perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations rely more on acoustics. Our paradigm could be used to test this prediction.
 
-How much \emph{should} listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models predict that cue should be weighted in proportion to their reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments, we cannot say that children's weighting was optimal relative to cue reliability, only that it was adaptive: weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know to what extent this adaptation was speaker-specific vs. speaker-general. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
+How much \emph{should} listeners rely on acoustics and how much should they rely on expectations? Ideal observer models predict that cues should be weighted in proportion to their reliability \cite{jacobs1999, ernst2002}. This prediction holds for adults across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments, we cannot say that children's weighting was optimal, only that it was adaptive: weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know whether this adaptation was speaker-specific or speaker-general. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
 
-The results of our experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability. Noisy channel principles thus provide a framework for understanding language processing in both adults and children.
+Our experiments show that children, like adults, flexibly trade-off between information sources in language comprehension in response to their reliability. Noisy channel principles thus provide a framework for understanding language processing in both adults and children.
 
 %, kleinschmidt2015 and levels
 
