fixed two typos Matt noticed

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -107,7 +107,7 @@ When children and adults were exposed to a speaker who was likely to produce sem
 
 \section{Experiment 2}
 
-Experiment 2 replicates Experiment 1 in a larger and developmentally-broader sample. We ask two related questions: (1) Does the use of speaker-expectations increase over development, and (2) if so, is due to improving abilities to form these expectations or to use them in processing ambiguous utterances.
+Experiment 2 replicates Experiment 1 in a larger and developmentally-broader sample. We ask two related questions: (1) Does the use of speaker-expectations increase over development, and (2) if so, is it due to improving abilities to form these expectations or to use them in processing ambiguous utterances.
 
 \subsection{Method}
 
@@ -216,7 +216,7 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 When we use language to communicate, we do more than process the sounds we hear; we try to infer speakers' intended meaning \cite{clark1996}. Because perception is inherently uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments show that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier. Children's reliance on speaker-expectations appears to track their developing ability to form these expectations, an ability that improves over the preschool years.
 
-In our experiments, children adjusted their reliance on expectations as much as adults, but also generally relied more on top-down expectations. Because of the greater noise inherent in children’s perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations rely more on acoustics. Our paradigm could be used to test this prediction.
+In our experiments, children adjusted their reliance on expectations as much as adults, but also generally relied more on top-down expectations. Because of the greater noise inherent in children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations rely more on acoustics. Our paradigm could be used to test this prediction.
 
 How much \emph{should} listeners rely on acoustics and how much should they rely on expectations? Ideal observer models predict that cues should be weighted in proportion to their reliability \cite{jacobs1999, ernst2002}. This prediction holds for adults across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments, we cannot say that children's weighting was optimal, only that it was adaptive: weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know whether this adaptation was speaker-specific or speaker-general. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
 
